Fix contact page on mobile

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -2,7 +2,7 @@
 
 .contact__container {
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
   align-items: center;
